[package]
name = "research-diesel-timestamp"
version = "0.1.0"
authors = ["Yuta Tachihara"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4.0"